@@ -1,3 +1,8 @@
+2006-02-22  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/layout.R (layout.merge) : added
+	* interfaces/R/src/rinterface.c (R_igraph_layout_merge_dla) : added
+
 2006-02-12  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/topology.R (graph.isocreate) : added
